--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div class="hr"></div>
 						<h1>霹雳之舞个人主题模块</h1>
 						<div class="hr"></div>
-						<h3>半神半圣亦半仙,全儒全道是全贤;脑中真书藏万卷;掌握文武半边天.<p>----素还真 《霹雳布袋戏》</p></h3>>
+						<h4>半神半圣亦半仙,全儒全道是全贤;脑中真书藏万卷;掌握文武半边天.<p>----素还真 《霹雳布袋戏》</p></h4>
 						<div class="enter">ENTER</div>
 					</div>			
 				</div>
@@ -89,8 +89,9 @@
 			</div>
 			<div class="site-sharing">
 				<canvas id="mycanvashr"></canvas>
+				<h1>待续更新，敬请期待！</h1>
 			</div>
-			<footer>
+		<footer>
 			<ul class="share-group">
 				<li><a href="#" class="iconfont">&#xe62b;</a></li>
 				<li><a href="#" class="iconfont">&#xe62c;</a></li>
@@ -102,8 +103,8 @@
 				@copy倪海华
 			</div>
 		</footer>
-			<div class="mask"></div>		
-		</div>
+		<div class="mask"></div>		
+	</div>
 		<div id="siderbar">
 				<ul>
 					<li class="active"><a href="#">首页</a></li>
@@ -112,7 +113,7 @@
 					<li><a href="#">友链</a></li>
 				</ul>
 			</div>
-		<div class="back-to-top iconfont">&#xe62e;</div>	
+		<div class="back-to-top iconfont">&#xe62e;</div>
 		<script src="js/jquery-3.1.0.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 	</body>
